# work-time-logger

./: .gitignore  README.md  pyproject.toml  test_result.txt  test_result_all.txt  test_result_export.txt  tmp_log.txt
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  profile-schema.json  profile.md  quickstart.md
src/work_time_logger/: __init__.py  cli.py  daily_summary.py  dashboard.py  db.py  exporter.py  operations.py  tui.py  widgets.py
src/work_time_logger/modals/: __init__.py  base.py  confirm_action.py  confirm_delete.py  daily_summary.py  export_logs.py  filter.py  help.py  job_code.py  job_selection.py  jump_to_date.py
tests/: test_cli.py  test_exporter.py  test_job_codes.py  test_note_aggregation.py  test_operations.py  test_tui.py  test_undo_redo.py  test_widgets.py
