[project]
name = "work-time-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.0.2",
    "typer>=0.24.1",
]

[project.scripts]
work-time-logger = "work_time_logger:main"
wtl = "work_time_logger:main"
wtlui = "work_time_logger:tui_main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
