[project]
name = "work-time-logger"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "textual>=8.0.2",
    "typer>=0.24.1",
]

[project.scripts]
work-time-logger = "work_time_logger:main"
wtl = "work_time_logger:main"
wtlui = "work_time_logger:tui_main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "pyright>=1.1.410",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B110"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D100", # Missing docstring in public module (files)
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D201", "D202", # missing-blank-line-before-summary
    "D205", # missing-blank-line-after-summary
    "D417", # undocumented-param
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
